# extendedSwiftLint

./: .gitignore  .swiftlint.yml  BUILD  MODULE.bazel  README.md  WORKSPACE  file.swift
extendedSwiftLint/: Package.swift
extendedSwiftLint/.swiftpm/xcode/xcshareddata/xcschemes/: extendedSwiftLint-Package.xcscheme
extendedSwiftLint/Tests/swiftlintTests/: swiftlintTests.swift
swiftlint_extra_rules/: AccessibilityLabelForTestRule.swift  OneDelarationPerFileRule.swift
