module(
    name = "extended-swiftlint",
    version = "0.0.0",
    compatibility_level = 1,
    repo_name = "extended-swiftlint",
)

bazel_dep(name = "swiftlint", version = "0.54.0", repo_name = "SwiftLint")
extra_rules = use_extension("@SwiftLint//bazel:extensions.bzl", "extra_rules")
extra_rules.setup(srcs = "@extended-swiftlint//swiftlint_extra_rules:extra_rules")

bazel_dep(name = "rules_xcodeproj", version = "1.13.0")

bazel_dep(name = "rules_swift_package_manager", version = "0.28.0")
bazel_dep(name = "gazelle", version = "0.35.0")
bazel_dep(name = "rules_swift", version = "1.16.0")
bazel_dep(name = "rules_apple", version = "3.2.1")